Switch a few core plugins to the new api